src/test/deca/context/invalid/provided/printBoolean.deca
//printBoolean.deca:3:4: Print ne prend en argument que : entier,réel ou chaine de caractéres 
{
    print(true);
}